# conan-shapelib

./: .travis.yml  CMakeLists.txt  FindShapelib.cmake  Jenkinsfile  Shapelib.cmake  appveyor.yml  conanfile.py
test/: CMakeLists.txt  conanfile.py  shptest.c
